// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tests > basic trade test > 1- balances before trade 1`] = `
Map {
  ".token1.TOKEN1" => Map {
    "ST1SJ3DTE5DN7X54YDH5D64R3BCB6A2AG2ZQ8YPD5" => 1000000000000n,
  },
  "STX" => Map {
    "ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM" => 100000000000000n,
    "ST1SJ3DTE5DN7X54YDH5D64R3BCB6A2AG2ZQ8YPD5" => 100000000000000n,
    "ST2CY5V39NHDPWSXMW9QDT3HC3GD6Q6XX4CFRK9AG" => 100000000000000n,
    "ST2JHG361ZXG51QTKY2NQCVBPPRRE2KZB1HR05NNC" => 100000000000000n,
    "ST2NEB84ASENDXKYGJPQW86YXQCEFEX2ZQPG87ND" => 100000000000000n,
    "ST2REHHS5J3CERCRBEPMGH7921Q6PYKAADT7JP2VB" => 100000000000000n,
    "ST3AM1A56AK2C1XAFJ4115ZSV26EB49BVQ10MGCS0" => 100000000000000n,
    "ST3NBRSFKX28FQ2ZJ1MAKX58HKHSDGNV5N7R21XCP" => 100000000000000n,
    "ST3PF13W7Z0RRM42A8VZRVFQ75SV1K26RXEP8YGKJ" => 100000000000000n,
    "STNHKEPYEPJ8ET55ZZ0M5A34J0R3N5FM2CMMMAZ6" => 100000000000000n,
  },
}
`;

exports[`tests > basic trade test > 2- order created 1`] = `
{
  "type": 7,
  "value": {
    "type": 1,
    "value": 0n,
  },
}
`;

exports[`tests > basic trade test > 3- balances after order creation 1`] = `
Map {
  ".token1.TOKEN1" => Map {
    "ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.market" => 125000000n,
    "ST1SJ3DTE5DN7X54YDH5D64R3BCB6A2AG2ZQ8YPD5" => 999875000000n,
  },
  "STX" => Map {
    "ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM" => 100000000000000n,
    "ST1SJ3DTE5DN7X54YDH5D64R3BCB6A2AG2ZQ8YPD5" => 100000000000000n,
    "ST2CY5V39NHDPWSXMW9QDT3HC3GD6Q6XX4CFRK9AG" => 100000000000000n,
    "ST2JHG361ZXG51QTKY2NQCVBPPRRE2KZB1HR05NNC" => 100000000000000n,
    "ST2NEB84ASENDXKYGJPQW86YXQCEFEX2ZQPG87ND" => 100000000000000n,
    "ST2REHHS5J3CERCRBEPMGH7921Q6PYKAADT7JP2VB" => 100000000000000n,
    "ST3AM1A56AK2C1XAFJ4115ZSV26EB49BVQ10MGCS0" => 100000000000000n,
    "ST3NBRSFKX28FQ2ZJ1MAKX58HKHSDGNV5N7R21XCP" => 100000000000000n,
    "ST3PF13W7Z0RRM42A8VZRVFQ75SV1K26RXEP8YGKJ" => 100000000000000n,
    "STNHKEPYEPJ8ET55ZZ0M5A34J0R3N5FM2CMMMAZ6" => 100000000000000n,
  },
}
`;

exports[`tests > basic trade test > 4- order filled 1`] = `
{
  "type": 7,
  "value": {
    "type": 1,
    "value": 0n,
  },
}
`;

exports[`tests > basic trade test > 5- balances after trade 1`] = `
Map {
  ".token1.TOKEN1" => Map {
    "ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.market" => 0n,
    "ST1SJ3DTE5DN7X54YDH5D64R3BCB6A2AG2ZQ8YPD5" => 999875000000n,
    "ST2CY5V39NHDPWSXMW9QDT3HC3GD6Q6XX4CFRK9AG" => 125000000n,
  },
  "STX" => Map {
    "ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM" => 100000000100000n,
    "ST1SJ3DTE5DN7X54YDH5D64R3BCB6A2AG2ZQ8YPD5" => 100000009900000n,
    "ST2CY5V39NHDPWSXMW9QDT3HC3GD6Q6XX4CFRK9AG" => 99999990000000n,
    "ST2JHG361ZXG51QTKY2NQCVBPPRRE2KZB1HR05NNC" => 100000000000000n,
    "ST2NEB84ASENDXKYGJPQW86YXQCEFEX2ZQPG87ND" => 100000000000000n,
    "ST2REHHS5J3CERCRBEPMGH7921Q6PYKAADT7JP2VB" => 100000000000000n,
    "ST3AM1A56AK2C1XAFJ4115ZSV26EB49BVQ10MGCS0" => 100000000000000n,
    "ST3NBRSFKX28FQ2ZJ1MAKX58HKHSDGNV5N7R21XCP" => 100000000000000n,
    "ST3PF13W7Z0RRM42A8VZRVFQ75SV1K26RXEP8YGKJ" => 100000000000000n,
    "STNHKEPYEPJ8ET55ZZ0M5A34J0R3N5FM2CMMMAZ6" => 100000000000000n,
  },
}
`;
